@@ -29,18 +29,18 @@ from zope import component, interface, event
 
 import zope.publisher
 from zope.publisher import contenttype
+from zope.publisher.interfaces import Redirect
+from zope.publisher.interfaces import ISkinnable
 from zope.publisher.interfaces.http import IHTTPCredentials
 from zope.publisher.interfaces.http import IHTTPRequest
 from zope.publisher.interfaces.http import IHTTPApplicationRequest
 from zope.publisher.interfaces.http import IHTTPPublisher
 from zope.publisher.interfaces.http import IHTTPVirtualHostChangedEvent
 from zope.publisher.interfaces.http import IResult
-
-from zope.publisher.interfaces import Redirect
-from zope.publisher.interfaces.browser import IBrowserRequest
 from zope.publisher.interfaces.http import IHTTPResponse
 from zope.publisher.interfaces.http import IHTTPApplicationResponse
 from zope.publisher.interfaces.logginginfo import ILoggingInfo
+from zope.publisher.skinnable import setDefaultSkin
 from zope.i18n.interfaces import IUserPreferredCharsets
 from zope.i18n.interfaces import IUserPreferredLanguages
 from zope.i18n.locales import locales, LoadLocaleError
@@ -449,9 +449,9 @@ class HTTPRequest(BaseRequest):
             response=self.response.retry(),
             )
         # restore the default skin
-        if IBrowserRequest.providedBy(self):
-            # only browser requests have skins
-            zope.publisher.skinnable.setDefaultSkin(request)
+        if ISkinnable.providedBy(self):
+            # only ISkinnable requests have skins
+            setDefaultSkin(request)
 
         request.setPublication(self.publication)
         request._retry_count = self._retry_count
